# comp371_macos_skeleton

./: CMakeLists.txt  Doxyfile  Makefile
shaders/: vertex.shader
src/: OBJloader.h  main.cpp  shaderloader.h
